Full stack React App structure with Node/Express/Mysql/Sequelize boilerplate

--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
   "name": "desire-to-expire",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "![Desire-to-Expire](https://i.ytimg.com/vi/eHpGS9-8Rd0/hqdefault.jpg) ## A helpful app designed to keep your Refidgerator fresh, and remind you to use parishable items before they COME ALIVE!",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kels-gainer/Desire-to-Expire.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kels-gainer/Desire-to-Expire/issues"
+  },
+  "homepage": "https://github.com/kels-gainer/Desire-to-Expire#readme",
   "dependencies": {
     "express": "^4.16.4",
     "mysql": "^2.16.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8",
     "sequelize": "^5.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
