slight changes to mysql models and dev settings to connect to db without errors

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/kels-gainer/Desire-to-Expire#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
+    "npm": "^6.9.0",
     "sequelize": "^5.1.0"
   }
 }
