auth0 and db updates

--- a/package.json
+++ b/package.json
@@ -25,7 +25,13 @@
   },
   "homepage": "https://github.com/kels-gainer/Desire-to-Expire#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "helmet": "^3.16.0",
+    "jwks-rsa": "^1.4.0",
+    "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
     "npm": "^6.9.0",
     "sequelize": "^5.1.0"
