--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "mysql2": "^1.6.5",
     "npm": "^6.9.0",
     "sequelize": "^5.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.0"
   }
 }
