Random Testing Stuff

--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   "dependencies": {
     "express": "^4.16.4",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
     "sequelize": "^5.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.0"
   }
 }
