--- a/config/config.json
+++ b/config/config.json
@@ -4,19 +4,20 @@
     "password": null,
     "database": "database_development",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port":"3000"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "Fridge_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "Fridge_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
