--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
   },
   "homepage": "https://github.com/kels-gainer/Desire-to-Expire#readme",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "express": "^4.16.4",
+    "foundation-sites": "^6.5.3",
     "mysql": "^2.16.0",
+    "react-bootstrap": "^1.0.0-beta.6",
+    "react-foundation": "^0.9.6",
+    "react-foundation-modal": "^0.1.5",
     "sequelize": "^5.1.0"
   }
 }
