--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "auth0-js": "^9.10.1",
     "axios": "^0.18.0",
+    "mdbreact": "^4.11.1",
+    "moment": "^2.24.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-router": "^5.0.0",
