--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,15 @@
   "dependencies": {
     "auth0-js": "^9.10.1",
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "mdbreact": "^4.11.1",
     "moment": "^2.24.0",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "reactstrap": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
