--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,8 @@
     "reactstrap": "^8.0.0"
   },
   "scripts": {
-    // "start": "react-scripts start",
-    "start": "node server.js",
+    "start": "react-scripts start",
+    // "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
