--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
   },
   "homepage": "https://github.com/kels-gainer/Desire-to-Expire#readme",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "express": "^4.16.4",
-    "react-bootstrap": "^1.0.0-beta.6",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
+    "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "helmet": "^3.16.0",
     "jwks-rsa": "^1.4.0",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
+    "node": "^11.13.0",
     "npm": "^6.9.0",
+    "react-bootstrap": "^1.0.0-beta.6",
     "sequelize": "^5.1.0"
   },
   "devDependencies": {
