--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "start": "react-scripts start",
     // "start": "node server.js",
-    "build": "react-scripts build",
+    // "build": "react-scripts build",
+    "build": "heroku-postbuild",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
