--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     // "start": "node server.js",
     // "build": "react-scripts build",
-    "build": "heroku-postbuild",
+    "start": "node src/index.js",
+    "build": "webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
