--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
+  "engines": {
+    "npm": "6.4.1",
+    "node": "8.12.0"
+  },
+  
   "dependencies": {
     "auth0-js": "^9.10.1",
     "axios": "^0.18.0",
@@ -18,8 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    // "build": "react-scripts build",
-    "build": "webpack",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
